--- a/src/components/pages/Offer/Offer/OfferDetails/OfferThumbnail/OfferThumbnail.scss
+++ b/src/components/pages/Offer/Offer/OfferDetails/OfferThumbnail/OfferThumbnail.scss
@@ -4,8 +4,8 @@
   align-items: center;
   background-color: $grey-very-light;
   border: none;
-  border-bottom: rem(1px) solid $grey-medium;
-  border-radius: rem(4px);
+  border-radius: rem(3px);
+  box-shadow: 0 0 rem(20px) 0 $black-shadow;
   display: flex;
   flex-direction: column;
   height: rem(385px);
