--- a/src/styles/components/pages/Offer/_OfferV2.scss
+++ b/src/styles/components/pages/Offer/_OfferV2.scss
@@ -19,8 +19,10 @@
 
       .sidebar {
         border: rem(1px) solid $grey-medium;
+        border-radius: 4px;
         box-shadow: 0 0 rem(20px) 0 $black-shadow;
         flex: 0 0 rem(256px);
+        height: fit-content;
       }
     }
   }
